Fixed overflowing tables

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -115,7 +115,9 @@ table tr[visible='true'] {
     display: table-row;
 }
 
-td, th {
+td, tbody th > a {
+    -ms-word-break: break-all;
+    word-break: break-all;
     word-break: break-word;
     overflow-wrap: break-word;
 }
